--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,65 +7,30 @@
     android:layout_height="match_parent"
     android:theme="@style/AppTheme.NoActionBar"
     tools:context=".Dashboard">
-    <ViewFlipper
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/flipp"/>
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/app_name"-->
-        <!--android:textSize="30dp"-->
-        <!--android:textAlignment="center"-->
-        <!--android:textStyle="bold"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:textColor="#008577"-->
-       <!--/>-->
+        android:layout_height="wrap_content"
+        android:id="@+id/flip">
+        <com.daimajia.slider.library.SliderLayout
+            android:id="@+id/slider"
+            android:layout_width="fill_parent"
+            android:layout_height="320dp"
+            />
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="30dp"-->
-        <!--android:layout_margin="5dp"-->
-        <!--android:background="#641D0E"-->
-        <!--app:cardCornerRadius="30dp">-->
+    </RelativeLayout>
 
-        <!--<ImageView-->
-            <!--android:layout_width="70dp"-->
-            <!--android:layout_height="70dp"-->
-            <!--android:src="@drawable/account"/>-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/flip"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="80dp"-->
-            <!--android:layout_marginTop="5dp"-->
-            <!--android:text="@string/app_name"-->
-            <!--android:textColor="#008577"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="30dp" />-->
+        <android.support.design.widget.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            />
 
-        <!--<TextView-->
-            <!--android:layout_width="75dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="120dp"-->
-            <!--android:layout_marginTop="50dp"-->
-            <!--android:textSize="20dp"-->
-            <!--android:textColor="#008577"-->
-            <!--android:text="@string/app_name"-->
-            <!--android:textAlignment="center" />-->
 
-        <!--<TextView-->
-            <!--android:layout_width="97dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="200dp"-->
-            <!--android:layout_marginTop="50dp"-->
-            <!--android:text="@string/app_name"-->
-            <!--android:textColor="#008577"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="20dp" />-->
-
-    <!--</android.support.v7.widget.CardView>-->
 
 </RelativeLayout>
