--- a/app/src/main/res/layout/content_display.xml
+++ b/app/src/main/res/layout/content_display.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Display"
+    tools:context=".Activity.Display"
     android:background="@drawable/displayer"
     tools:showIn="@layout/activity_display">
 
